[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kina-bench"
version = "0.1.0"
description = ""
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "lighteval==0.9.2",
    "latex2sympy2_extended==1.10.2",
    "numpy==1.26.4",
    "datasets",
    "python-dotenv",
    "pyyaml",
    "hydra-core",
    "prettytable",
    "argdantic",
    "openai",
    "azure-ai-inference",
    "shortuuid",
    "matplotlib",
    "tqdm",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
